# hype-sol

./: .env.example  .gitignore  .prettierignore  readme.md
apps/counter/: Anchor.toml  readme.md
apps/counter/app/: README.md  counter.json  package.json  tailwind.config.cjs
apps/counter/tests/: counter.ts
apps/hello_world/: Anchor.toml  Cargo.toml  readme.md
apps/hello_world/migrations/: deploy.ts
apps/hello_world/tests/: hello_world.ts
apps/hype-solana-notepad/: Anchor.toml  readme.md
apps/hype-solana-notepad/notes-frontend/: App.tsx  next.config.js
apps/hype-solana-notepad/tests/: hype-solana-notepad.ts
apps/messaging/: .env  README.md  index.html  package.json
apps/messaging/src/: App.tsx  main.tsx
apps/payment_form/: .env.example  README.md  package-lock.json  package.json
apps/payment_form/api/: nohup.out  package-lock.json  package.json
apps/payment_form/public/: index.html
apps/payment_form/src/: App.js
apps/register/: .env.local.example  README.md  package-lock.json  package.json
apps/register/public/: index.html
apps/register/src/: App.js  index.js
apps/treasury/: Anchor.toml  Cargo.toml  readme.md
apps/treasury/programs/treasury/: Cargo.toml
apps/treasury/programs/treasury/src/: lib.rs
apps/treasury/tests/: treasury.ts
contracts/messaging/tests/: messaging.ts
hype-solana-notepad/notes-frontend/: App.tsx  package-lock.json  package.json
hype-solana-notepad/notes-frontend/components/: HomePage.tsx  connect_wallet.tsx
programs/messaging/: .gitignore  Anchor.example.toml  Anchor.toml  README.md  package.json
(+57 files in other folders)
