[package]
name = "treasury"
version = "0.0.1"
authors = ["Paul, Benny"]
autobins = false

[workspace]
members = [
    "programs/*"
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[dependencies]

